--- a/src/main/package.json
+++ b/src/main/package.json
@@ -2,7 +2,7 @@
   "name": "main",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "main-build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,12 +13,19 @@
     "@types/mysql": "^2.15.7",
     "@types/node": "^12.7.4",
     "electron": "^6.0.7",
-    "tslint": "^5.19.0"
+    "tslint": "^5.19.0",
+    "tspath": "^1.3.7"
   },
   "dependencies": {
     "@types/express": "^4.17.1",
+    "@types/promise": "^7.1.30",
     "electron-is-dev": "^1.1.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "module-alias": "^2.2.1",
+    "mysql": "^2.17.1",
+    "promise": "^8.0.3"
+  },
+  "_moduleAliases": {
+    "@db": "./main-build/db"
   }
 }
