--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
+    "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "./build",
     "rootDirs": ["./src"],
